@@ -1,4 +1,4 @@
-$Id: README,v 1.42 2007-09-11 01:19:48 cmatsuoka Exp $
+$Id: README,v 1.43 2007-09-12 17:42:46 cmatsuoka Exp $
 
 
 
@@ -167,12 +167,13 @@ to be installed on the system:
 
 FRONT-ENDS
 
-xmp can be used stand-alone, as a plugin for BMP or XMMS or as a back-end
-for GQmpeg, xhippo and others. Get them in the following URLs:
+xmp can be used stand-alone, as a plugin for BMP or Audacious or as a back
+end for GQmpeg, xhippo and others. Get them in the following URLs:
 
-  BeepMP:  http://beepmp.sf.net
-  GQmpeg:  http://www.netpedia.net/hosting/gqview/mpeg-index.html
-  xhippo:  http://freshmeat.net/projects/gnuxhippo/homepage/
+  BeepMP:    http://beepmp.sf.net
+  Audacious: http://audacious-media-player.org
+  GQmpeg:    http://www.netpedia.net/hosting/gqview/mpeg-index.html
+  xhippo:    http://freshmeat.net/projects/gnuxhippo/homepage/
 
 WARNING: When using the XMMS plugin, it's advisable to disable the mikmod
 plugin (otherwise XMMS may get confused and eventually crash).
@@ -228,7 +229,7 @@ for description of the command line arguments recognized by xmp.)
 
 LICENSE
 
-Extended Module Player (C)1996-2006 Claudio Matsuoka, Hipolito Carraro Jr
+Extended Module Player (C)1996-2007 Claudio Matsuoka, Hipolito Carraro Jr
 AWE-specific portions of oss_seq.c Copyright (C) 1996,1997 Takashi Iwai
 ulaw encoding function Copyright (C) 1989 Rich Gopstein and Harris Corp
 XPK-SQSH decruncher Copyright (C) 1997 Bert Jahn
